--- a/style.css
+++ b/style.css
@@ -1,29 +1,50 @@
-body{
 
+* {
+  box-sizing: border-box;
+}
+
+body{
+margin: 0;
    background-image:url("http://www.trakoscan.hr/images/zbirka-knjiga.png");
 
   background-color: #cccccc; /* Used if the image is unavailable */
-  background-position: center; /*  <img src="http://www.trakoscan.hr/images/zbirka-knjiga.png"/>
+  background-position: center; /*  <img src="http://www.trakoscan.hr/images/zbirka-knjiga.png"/> 
   Center the image */
    background-repeat: repeat; /* Do not repeat the image */
    background-size: cover; /* Resize the background image to cover the entire container */
 }
+#projs{cursor: pointer;}
+ 
 
-.nav{
+ul.topnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
   position: fixed;
-   list-style-type: none;
-   margin: 0px;
-   padding: 0px;
-
-  display: inline-block;
 }
-a{
+
+ul.topnav li {float: left;}
+
+ul.topnav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
 }
 
-@media(max-width:800px){
-  font-size: 10px;
+ul.topnav li a:hover:not(.active) {background-color: #111;}
+
+ul.topnav li a.active {background-color: #4CAF50;}
+
+
+@media only screen and (max-width: 600px) {
+  /* For mobile phones:  [class*="col-"] {  }*/ 
+    width: 100%;
 }
+
 .welcome-section {
   display: flex;
   flex-direction: column;
@@ -34,4 +55,50 @@ a{
   color: white;
 }
 
- 
+
+div.gallery {
+  border: 1px solid #ccc;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.responsive {
+  padding: 0 6px;
+  float: left;
+  width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
