--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ margin: 0;
    background-repeat: repeat; /* Do not repeat the image */
    background-size: cover; /* Resize the background image to cover the entire container */
 }
-#projs{cursor: pointer;}
- 
+
 
 ul.topnav {
   list-style-type: none;
@@ -57,7 +56,8 @@ ul.topnav li a.active {background-color: #4CAF50;}
 
 
 div.gallery {
-  border: 1px solid #ccc;
+/*  border: 1px solid #ccc; */
+  color: white;
 }
 
 div.gallery:hover {
