--- a/style.css
+++ b/style.css
@@ -92,4 +92,4 @@ div.desc {
   display: table;
   clear: both;
 }
-footer, #contacts{ font-size: 30px; color: white;}
+/* footer, #contacts{ font-size: 30px; color: white;} */
