--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+
 * {
   box-sizing: border-box;
 }
@@ -34,7 +35,7 @@ ul.topnav li a {
   text-decoration: none;
 }
 
-ul.topnav li a:hover:not(.active) {background-color: #111;}
+ul.topnav li a:hover:not(.active) {background-color: grey;}
 
 ul.topnav li a.active {background-color: #4CAF50;}
 
@@ -73,10 +74,7 @@ div.desc {
   padding: 15px;
   text-align: center;
 }
-
-* {
-  box-sizing: border-box;
-}
+ 
 
 .responsive {
   padding: 0 6px;
