--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ div.desc {
   clear: both;
 }
 
-footer{
-  color:white;
-  font-size: 30px;
+footer, .contact{
+  color:blue;
+  font-size: 20px;
 }
