--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ div.desc {
   clear: both;
 }
 
-footer, .fas, .fab{
-  color:blue;
-  font-size: 20px;
+footer, .contact-details{
+  color:lightblue;
+  font-size: 10px;
 }
